src/test/c/reject/13-invalid-if-condition.arcx
if 4==6 {
    a:int=0;
} 